# sqlmesh-fabric-demo

./: .env_example  CLAUDE.md  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: sqlmesh__runner.ipynb
